Moved forward to create new ECS systems to initalise the networks. Add some basic (and horrible written) tests. Next step is to properly merge the  various network structs and components as this is just some silly AI slop.

--- a/SimpleML.uplugin
+++ b/SimpleML.uplugin
@@ -20,5 +20,8 @@
       "Type": "Runtime",
       "LoadingPhase": "Default"
     }
+  ],
+  "Plugins": [
+    { "Name": "UEcs", "Enabled": true }
   ]
 }
