--- a/SimpleML.uplugin
+++ b/SimpleML.uplugin
@@ -19,6 +19,11 @@
       "Name": "SimpleML",
       "Type": "Runtime",
       "LoadingPhase": "Default"
+    },
+    {
+      "Name": "GeneticAlgorithm",
+      "Type": "Runtime",
+      "LoadingPhase": "Default"
     }
   ],
   "Plugins": [
