Re-made the tournament selection, now it produce entities that then can be used by another system to breed/reset marked genomes.

--- a/Config/DefaultSimpleML.ini
+++ b/Config/DefaultSimpleML.ini
@@ -1,3 +1,5 @@
 ﻿[CoreRedirects]
 +ClassRedirects=(OldName="/Script/SimpleML.SimpleMLNetworkInitSystem",NewName="/Script/SimpleML.SimpleMLNNFloatInitSystem")
 +ClassRedirects=(OldName="/Script/SimpleML.SimpleMLFeedforwardSystem",NewName="/Script/SimpleML.SimpleMLNNFloatFeedforwardSystem")
++StructRedirects=(OldName="/Script/GeneticAlgorithm.RestGenomeComponent",NewName="/Script/GeneticAlgorithm.ResetGenomeComponent")
++StructRedirects=(OldName="/Script/GeneticAlgorithm.ParentsChildComponent",NewName="/Script/GeneticAlgorithm.BreedingPairComponent")
