Not immediately useful, but I did add a module for tests related to the genetic algorithm

--- a/SimpleML.uplugin
+++ b/SimpleML.uplugin
@@ -24,6 +24,11 @@
       "Name": "GeneticAlgorithm",
       "Type": "Runtime",
       "LoadingPhase": "Default"
+    },
+    {
+      "Name": "GeneticAlgorithmTests",
+      "Type": "Developer",
+      "LoadingPhase": "Default"
     }
   ],
   "Plugins": [
